@@ -1,3 +1,9 @@
+2008-11-04  Stefan Kost  <ensonic@users.sf.net>
+
+	* dllwrapper1/wine/module.c:
+	* dllwrapper1/wine/pe_image.c:
+	  Indeting and more logging.
+
 2008-10-17  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
